# CmakeLearn

./: CMakeLists.txt  build.sh  environment.sh  push2Gitee.sh  push2Github.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/common_lib/: CMakeLists.txt  utils.cpp  utils.h
src/common_lib/test/: CMakeLists.txt  test.cpp
src/tools/: CMakeLists.txt  main.cpp
